--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,22 @@ services:
       dockerfile: Dockerfile.production
     image: 1g0rbm/devops-for-programmers-project-lvl1
     command: make test
+    depends_on:
+      - db
+
+  db:
+    image: postgres:latest
+    restart: always
+    env_file:
+      - $PWD/app/.env
+    environment:
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_DB: ${DATABASE_NAME}
+    volumes:
+      - app-db:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+
+volumes:
+  app-db:
