--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,14 @@ services:
   db:
     image: postgres:latest
     restart: always
+    env_file:
+      - $PWD/app/.env
     environment:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_HOST: ${DATABASE_HOST}
+      POSTGRES_PORT: ${DATABASE_PORT}
     volumes:
       - app-db:/var/lib/postgresql/data
     ports:
