--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,7 +11,7 @@ env:
   DATABASE_USERNAME: test
   DATABASE_NAME: test
   DATABASE_PORT: 5432
-  DATABASE_HOST: db
+  DATABASE_HOST: "db"
 
 jobs:
   build:
