Added command for creating .env file

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,6 +39,9 @@ jobs:
           push: true
           tags: ${{ env.APP_DOCKER_IMAGE_NAME }}:cached
 
+      - name: Create .env file
+        run: make create-env
+
       - name: Run tests
         run: make test
 
