--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,36 +15,20 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: Set up docker buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build app
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: Dockerfile.production
-          cache-from: type=registry,ref=${{ env.APP_DOCKER_IMAGE_NAME }}:cached
-          cache-to: type=inline
-          push: true
-          tags: ${{ env.APP_DOCKER_IMAGE_NAME }}:cached
-
       - name: Create .env file
         run: make create-env
+
+      - name: Build app
+        run: make build
 
       - name: Run tests
         run: make test
 
-      - name: Push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: Dockerfile.production
-          cache-from: type=registry,ref=${{ env.APP_DOCKER_IMAGE_NAME }}:cached
-          push: true
-          tags: ${{ env.APP_DOCKER_IMAGE_NAME }}:latest
+      - name: Push image to dockerhub
+        run: make push
