--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,20 +15,20 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - name: Create .env file
+        run: make create-env
+
+      - name: CI
+        run: make ci
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Create .env file
-        run: make create-env
-
       - name: Build app
         run: make build
-
-      - name: Run tests
-        run: make test
 
       - name: Push image to dockerhub
         run: make push
