--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.production
+    image: 1g0rbm/devops-for-programmers-project-lvl1
     command: make test
-    env_file:
-      - ./app/.env
+    environment:
+      DATABASE_PASSWORD: $DATABASE_PASSWORD
+      DATABASE_USERNAME: $DATABASE_USERNAME
+      DATABASE_NAME: $DATABASE_NAME
+      DATABASE_HOST: $DATABASE_HOST
+      DATABASE_PORT: $DATABASE_PORT
     depends_on:
       - db
 
@@ -16,10 +21,13 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      POSTGRES_USER: ${DATABASE_USERNAME}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_PASSWORD: $DATABASE_PASSWORD
+      POSTGRES_USER: $DATABASE_USERNAME
+      POSTGRES_DB: $DATABASE_NAME
     volumes:
       - app-db:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
 
 volumes:
   app-db:
