--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -4,9 +4,9 @@ WORKDIR /app
 COPY app/package.json .
 COPY app/package-lock.json .
 
-RUN npm ci
+RUN ["npm", "ci"]
 
-COPY app/. .
+COPY app .
 
 EXPOSE 8080
 
