--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
 
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile.production
     image: 1g0rbm/devops-for-programmers-project-lvl1
-    command: make test
+    command: ["npm", "test"]
     environment:
       DATABASE_PASSWORD: $DATABASE_PASSWORD
       DATABASE_USERNAME: $DATABASE_USERNAME
@@ -15,7 +15,8 @@ services:
       DATABASE_HOST: $DATABASE_HOST
       DATABASE_PORT: $DATABASE_PORT
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   db:
     image: postgres:latest
@@ -26,8 +27,11 @@ services:
       POSTGRES_DB: $DATABASE_NAME
     volumes:
       - app-db:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   app-db:
